fix: 解决 Docker container 启动顺序问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.2"
 services:
   bot:
     image: missevan-bot:latest
+    depends_on:
+      - redis
     volumes:
       - ~/missevan:/app/missevan/data
   redis:
